--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 NEXT_PUBLIC_MOVIEDB_APIKEY=c64152e555c23c35017e11480c088c5e
+
+
+NEXT_PUBLIC_FB_API_KEY=AIzaSyCCWH-I-YOFqD3cpstWgN9FkjaCHRT6l50
+NEXT_PUBLIC_FB_AUTH_DOMAIN=netflix-clone-ad775.firebaseapp.com
+NEXT_PUBLIC_FB_PROJECT_ID=netflix-clone-ad775
+NEXT_PUBLIC_STORAGE=netflix-clone-ad775.appspot.com
+NEXT_PUBLIC_FB_MESSAGING_ID=79060762016
+NEXT_PUBLIC_FB_APP_ID=1:79060762016:web:9d656b51a22160b194f8c5
