--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@heroicons/react": "^2.0.13",
-    "@reduxjs/toolkit": "^1.9.1",
-    "axios": "^1.2.1",
-    "classnames": "^2.3.2",
-    "firebase": "^9.15.0",
-    "next": "latest",
-    "query-string": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
-    "swiper": "^8.4.5"
-  },
-  "devDependencies": {
-    "@types/node": "18.11.3",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
-    "typescript": "4.8.4"
-  }
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build && next export",
+      "start": "next start"
+   },
+   "dependencies": {
+      "@heroicons/react": "^2.0.13",
+      "@reduxjs/toolkit": "^1.9.1",
+      "axios": "^1.2.1",
+      "classnames": "^2.3.2",
+      "firebase": "^9.15.0",
+      "next": "latest",
+      "query-string": "^8.1.0",
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "react-icons": "^4.7.1",
+      "react-loader-spinner": "^5.3.4",
+      "react-redux": "^8.0.5",
+      "swiper": "^8.4.5"
+   },
+   "devDependencies": {
+      "@types/node": "18.11.3",
+      "@types/react": "18.0.21",
+      "@types/react-dom": "18.0.6",
+      "autoprefixer": "^10.4.13",
+      "postcss": "^8.4.20",
+      "tailwindcss": "^3.2.4",
+      "typescript": "4.8.4"
+   },
+   "resolutions": {
+      "styled-components": "^5"
+   }
 }
